# gwbackpop

./: .gitignore  README.md  WORKFLOWS.md  backpop.py  cosmo_prior.py  hierarchical_backpop_jax.py  metadata_utils.py  plot_backpop.py  pyproject.toml  run_GW150914.sh  run_backpop.py  run_catalog_gwtc3.slurm  run_hierarchical_2d.sh  run_hierarchical_3d.sh  run_injections.py  smoke_test_imports.py
.github/workflows/: tests.yml
experimental/emulator/: README.md  __init__.py  api.py  toy_emulator_demo.py
scripts/: hierarchical_backpop_jax.py  plot_backpop.py  run_backpop.py  run_injections.py  smoke_test_imports.py
src/: run_backpop.py
src/gwbackpop/: config.py  cosmology.py
src/gwbackpop/cli/: plot_backpop.py  plot_hierarchical.py  run_backpop.py  run_hierarchical.py  run_injections.py  smoke_test.py
src/gwbackpop/evolution/: __init__.py  cosmic.py  cosmic_capabilities.py
src/gwbackpop/inference/: hierarchical.py  likelihoods.py  population.py  single_event.py
src/gwbackpop/io/: gw_pe.py
src/gwbackpop/plotting/: diagnostics.py
src/gwbackpop/population/: __init__.py  constants.py
src/gwbackpop/selection/: calibrate_snr_pdet.py  consistency.py  injections.py  lvk.py  proposals.py  snr_pdet.py
tests/: test_cli_invocation_hygiene.py  test_console_entrypoints.py  test_cosmic_capabilities.py  test_cosmic_evolv2_abi.py  test_default_hyperparams.py  test_direct_pdet_selection.py  test_hierarchical_toy_recovery.py  test_injection_config_metadata.py  test_injection_proposal.py  test_injections_import_hygiene.py  test_lightweight_infrastructure.py  test_lvk_subsampling_normalization.py  test_mass_frame_detection.py  test_plot_cli_directory_types.py  test_selection_catalog_helper.py  test_selection_mc_quality_gates.py  test_selection_mode.py  test_selection_model_consistency.py  test_snr_pdet_proxy.py  test_support_gate_policy.py  test_truncated_population_densities.py
workflows/shell/: run_hierarchical_2d.sh  run_hierarchical_3d.sh
workflows/slurm/: run_catalog_gwtc3.slurm
