[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gwbackpop"
version = "0.1.0"
description = "BackPop gravitational-wave binary-population inference workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "astropy",
  "pesummary",
  "nautilus-sampler",
  "jax",
  "numpyro",
  "h5py",
  "matplotlib",
  "corner",
  "seaborn",
  "arviz",
]

[project.optional-dependencies]
test = ["pytest"]
cosmic = ["cosmic-popsynth"]
all = ["pytest", "cosmic-popsynth"]

[project.scripts]
gwbackpop-run-event = "gwbackpop.cli.run_backpop:main"
gwbackpop-run-injections = "gwbackpop.cli.run_injections:main"
gwbackpop-run-hierarchical = "gwbackpop.cli.run_hierarchical:main"
gwbackpop-calibrate-snr-pdet = "gwbackpop.selection.calibrate_snr_pdet:main"
gwbackpop-plot = "gwbackpop.cli.plot_backpop:main"
gwbackpop-smoke-test = "gwbackpop.cli.smoke_test:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "cosmic: tests that import or run COSMIC binary-evolution code",
]


[tool.setuptools.packages.find]
where = ["src"]
